[package]
name = "essp"
version = "0.1.0"
license = "MIT"
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
repository = "https://github.com/endticket/essp"
description = "ESSP protocol implementation for handling payment devices"

[dependencies]
serial = "^0.4.0"
byteorder = "0.5"
rand = "0.3"
rust-crypto = "=0.2.36"
log = "0.3"
itertools = "0.7.6"
